package com.gdavidpb.tuindice.login.ui

object LoginUiTags {
	const val SignInIdleContainer = "login_sign_in_idle_container"
	const val SignInLoggingInContainer = "login_sign_in_logging_in_container"
	const val SignInButton = "login_sign_in_button"
	const val UsbIdTextField = "login_usb_id_text_field"
	const val PasswordTextField = "login_password_text_field"
	const val PasswordToggle = "login_password_toggle"
	const val RandomFlipperText = "login_random_flipper_text"
	const val AnimatedPatternBackground = "login_animated_pattern_background"
	const val UpdatePasswordIdleContainer = "login_update_password_idle_container"
	const val UpdatePasswordUpdatingIndicator = "login_update_password_updating_indicator"
}

